kubernetes/platform-apps/temporal/base/temporal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: temporal-gateway
  namespace: temporal
  labels:
    auth.konnektr.io/enabled: "true" # Enable global Auth0 authentication
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  gatewayClassName: eg
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: temporal.konnektr.io
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: temporal-tls
